# ok-py-serial

./: .gitignore  CLAUDE.md  README.md  TODO.md  mise.toml  pyproject.toml
.github/workflows/: pdoc.yml
ok_serial/: __init__.py  _cli.py  _connection.py  _device.py  _exceptions.py  _lock.py  _locking.py  _matcher.py  _matching.py  _metadata.py  _monitor.py  _ports.py  _scan.py  _scanning.py  _terminal.py  _terminal_chunker.py  _terminal_decorator.py  _terminal_mode.py  _terminal_mode_saver.py  _terminal_mode_tracker.py  _terminal_overlay.py  _terminal_style.py  _terminal_style_saver.py  _terminal_window.py  _timeout_math.py  _tracker.py  cli.py  ok_scan_serial_cli.py  okserial_cli.py  terminal.py
ok_serial/terminal/: chunker.py  decorator.py  escape_code_chunker.py  keyboard.py  main.py  mode_tracker.py
tests/: conftest.py  test_connection.py  test_lock.py  test_locking.py  test_matcher.py  test_matching.py  test_monitor.py  test_ports.py  test_scan.py  test_scanning.py  test_terminal_chunker.py  test_terminal_decorator.py  test_terminal_keyboard.py  test_terminal_mode.py  test_terminal_mode_saver.py  test_terminal_mode_tracker.py  test_terminal_style_saver.py  test_timeout_math.py  test_tracker.py
