[project]
authors = [{ name = "Dan Egnor", email = "egnor@ofb.net" }]
dependencies = [
  "click>=8.3.1",
  "natsort>=8.4.0",
  "ok-logging-setup>=0.17",
  "pyserial>=3.5",
  "types-pyserial>=3.5.0.20251001",
]
description = "Serial port library (PySerial wrapper) with more features"
name = "ok-serial"
readme = "README.md"
requires-python = ">=3.11"
urls.Homepage = "https://github.com/egnor/ok-py-serial#readme"
urls.Repository = "https://github.com/egnor/ok-py-serial.git"
version = "0.4"

[project.scripts]
okserial = "ok_serial._cli:main"

[build-system]
requires = ["uv_build>=0.9.13", "uv_build<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "beartype",
  "mypy",
  "pdoc",
  "pyfakefs",
  "pytest",
  "pytest-asyncio",
  "pytest-mock",
  "ruff",
]

[tool.mypy]
exclude_gitignore = true
files = "."

[tool.pytest]
asyncio_mode = "auto"
log_level = "CRITICAL"
strict = true

[tool.ruff]
line-length = 80

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.uv.build-backend]
module-root = ""
